--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
-    "framer-motion": "^2.9.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
