--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "react-typed": "^1.2.0",
-    "use-dark-mode": "^2.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
